--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,7 +36,7 @@
             color: white;
         }
         * {box-sizing:border-box}
-        .w3-display-container {
+        .slideshow-container {
             max-width: 1000px;
             max-height: 500px;
             position: relative;
@@ -98,11 +98,6 @@
         }
     </style>
     <script type = "text/javascript">
-        $(function() {
-            $( "#menu" ).menu();
-            $( "#log-in" ).button();
-        });
-
         var slideIndex = 0;
         showSlides();
 
@@ -140,7 +135,7 @@
     </ul>
 </div>
 <h1>Welcome to NU Railway Service!</h1>
-<div class="w3-display-container">
+<div class="slideshow-container">
 
     <div class="mySlides fade">
         <img src="img1.jpg" style="width:100%; height:500px">
